Fixed an issue where the fixed masses in the 2nd level challenges could end up on the right side.
Made the bold tick marks on the plank be every other one rather than every fourth one.
# 0.00.11 (56703) Sep 19, 2011
9/19/11 Publishing version with additional challenge style for review.
Game: Added a new type of challenge where the user must work out the mass value.  This is now level 4.
Game: Added the ability to create challenges using non-brick masses.  This is now level 3.
# 0.00.10 (56568) Sep 14, 2011
9/14/11 Deploying to dev for review and feedback.
Game: Made the advanced brick challenges never have the same number of bricks on both sides.
Game: Added the ruler for seeing distances on the plank along with a control to turn it on and off.
Game: Added algorithm to prevent the same problem from occurring twice in a challenge set.
Game: Added an indication of the number of points gained to the smile face.
Game: Added sound.
Game: Fixed issue where, in some challenges, the brick stack would not get properly added to the plank and would float in space.
9/13/11 Deploying first version that includes game tab to dev for review
# 0.00.09 (56524) Sep 13, 2011
Game: Fixed: You could see level indicator when pressing "new game"
Game: Fixed floating point error in correct solution detection
Game: Added level indicators after the support column is removed
Game: Made it impossible to drag blocks unless in interactive mode
Incorporated new weights for mystery objects (1st tab) suggested by Trish L.
Added initial game tab.
# 0.00.08 (56363) Sep 9, 2011
9/9/11 Deploying snapshot for testing prior to adding game tab
Added two more people to the list of those that can be put on the teeter totter.
Made the highlight for occupied tick marks white.
Added "mystery vectors" that are shown instead of normal force vectors for mystery objects.
Added a 2nd set of mystery objects.
Fixed an issue where mystery objects were not positioned well under the mouse when created from the tool box.