@@ -239,7 +239,7 @@ public class Plank extends ShapeModelElement {
         ImmutableVector2D vectorToLocation = getPlankSurfaceCenter().getAddedInstance( new ImmutableVector2D( distanceFromCenter, 0 ).getRotatedInstance( tiltAngle ) );
         // Set the position of the mass to be just above the plank at the
         // appropriate distance so that it will drop to the correct place.
-        mass.setPosition( vectorToLocation.getX(), vectorToLocation.getY() + 0.1 );
+        mass.setPosition( vectorToLocation.getX(), vectorToLocation.getY() + 0.01 );
         addMassToSurface( mass );
     }
 
